# Solarspec

./: README.md  pyproject.toml
docs/: CONTRIBUTING.md
examples/: quick_analysis.py
solarspec/: __init__.py  cli.py  config.py  models.py
solarspec/api/: __init__.py
solarspec/core/: geo.py  narrative.py  solar.py
solarspec/data/: __init__.py  climate_zones.json  products.json  seismic_zones.json
solarspec/generators/: __init__.py  designer.py  document.py
solarspec/web/static/: app.js  style.css
solarspec/web/templates/: index.html
tests/: test_api.py  test_core.py  test_designer.py  test_geo.py  test_narrative.py
